Se ha realizado completamente la barra celeste

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,8 @@
-//UI Settimgs.
+//UI Settings.
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Lato&display=swap");
 
 //Components.
 
-@import "../components/blue-bar-pagemain/_bluebar.scss";
+@import "../components/keto/_keto.scss";
 
 //Screens
