--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,6 @@
 
 @import "../components/keto/_keto.scss";
 @import "../components/keto/Navbar";
+@import "../components/keto/Ketosisband";
+@import "../components/keto/Buttongetyours";
+@import "../components/keto/Cardbar";
