--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,5 @@
 @import "../components/keto/Ketosisband";
 @import "../components/keto/Buttongetyours";
 @import "../components/keto/Cardbar";
+@import "../components/keto/Featuredband";
+@import "../components/keto/Secondbuttonget";
