Se ha realizado la franza celeste de Essencial Element

--- a/src/components/keto/_Secondbuttonget.scss
+++ b/src/components/keto/_Secondbuttonget.scss
@@ -4,6 +4,8 @@
   align-items: center;
   padding-top: 20px;
   height: 100%;
+  margin-bottom: 80px;
+
   .btngetyourstoday {
     display: inline-block;
     padding: 0.8rem 4.5rem;
