--- a/src/components/keto/_keto.scss
+++ b/src/components/keto/_keto.scss
@@ -65,3 +65,43 @@ body {
     align-items: center;
   }
 }
+
+.celestiallandscape {
+  position: relative;
+  width: 100%;
+  color: #fff;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .titlecelestial {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 30px;
+    margin-top: -20px;
+
+    .titleA {
+      font-size: 38px;
+      text-align: center;
+      font-weight: normal;
+      .boldtext {
+        font-weight: bold;
+      }
+    }
+  }
+  .paragraph {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    p {
+      text-align: center;
+      margin-right: 90px;
+      margin-left: 90px;
+      line-height: 1.5;
+    }
+  }
+}
