Se ha realizado las tarjetas de los ingredientes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,4 @@
 @import "../components/keto/Cardbar";
 @import "../components/keto/Featuredband";
 @import "../components/keto/Secondbuttonget";
+@import "../components/keto/Ingredientcards";
