--- a/src/components/keto/_Secondbuttonget.scss
+++ b/src/components/keto/_Secondbuttonget.scss
@@ -1,12 +1,12 @@
-.buttonget {
+.buttonget2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 20px;
+  padding-top: 10px;
   height: 100%;
   margin-bottom: 80px;
 
-  .btngetyourstoday {
+  .btngetyourstoday2 {
     display: inline-block;
     padding: 0.8rem 4.5rem;
     border-radius: 50px;
