--- a/src/components/keto/_keto.scss
+++ b/src/components/keto/_keto.scss
@@ -105,3 +105,37 @@ body {
     }
   }
 }
+
+.guaranteed {
+  display: flex;
+  background-color: #142348;
+  padding: 10px 0px;
+  justify-content: center;
+  align-items: center;
+
+  .description90 {
+    text-align: center;
+    margin-top: 50px;
+    h3 {
+      margin: 0;
+      color: #fff;
+      letter-spacing: 0.1em;
+      font-size: 22px;
+      font-weight: bold;
+    }
+    p {
+      margin: 0;
+      margin-top: 0.5rem;
+      font-weight: normal;
+      color: #fff;
+      margin-right: 50px;
+      margin-left: 50px;
+      font-size: 15px;
+      line-height: 1.5rem;
+    }
+    .img90 {
+      padding-top: 50px;
+      margin-left: 50px;
+    }
+  }
+}
