--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,3 +11,4 @@
 @import "../components/keto/Featuredband";
 @import "../components/keto/Secondbuttonget";
 @import "../components/keto/Ingredientcards";
+@import "../components/keto/Numbersband"
