Se ha realizado franja de users

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,4 +11,5 @@
 @import "../components/keto/Featuredband";
 @import "../components/keto/Secondbuttonget";
 @import "../components/keto/Ingredientcards";
-@import "../components/keto/Numbersband"
+@import "../components/keto/Numbersband";
+@import "../components/keto/Userband";
