Se ha realizado la franza de Made in ...

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,3 +13,4 @@
 @import "../components/keto/Ingredientcards";
 @import "../components/keto/Numbersband";
 @import "../components/keto/Userband";
+@import "../components/keto/Madeband";
