--- a/src/components/keto/_Madeband.scss
+++ b/src/components/keto/_Madeband.scss
@@ -1,5 +1,6 @@
-.numbersband {
+.madeband {
   margin-top: 65px;
+  margin-left: 50px;
 
   h2 {
     text-align: center;
@@ -8,38 +9,37 @@
     font-size: 35px;
   }
 
-  .numbers {
+  .mades {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 100px;
+    margin-left: 30px;
   }
-  .number {
+  .made {
     text-align: center;
   }
 
-  .number1,
-  .number2,
-  .number3,
-  .number4 {
-    background-color: #142348;
+  .usa,
+  .gmp,
+  .fda,
+  .natural {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 60px;
-    border-radius: 50px;
-    color: #fff;
-    font-weight: bold;
     margin-right: 20px;
     font-size: 20px;
     margin-left: 96px;
+    margin-left: 15px;
   }
 
-  .support,
-  .boostnumb,
-  .manage,
-  .improve {
+  .madeinusa,
+  .gmpcertified,
+  .fdaapproved,
+  .allnaturall {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 20px;
     font-size: 16px;
     font-weight: bold;
@@ -47,14 +47,17 @@
     font-size: 20px;
   }
 
-  .descriptionnumb {
+  .usadesc,
+  .gmpdesc,
+  .fdadesc,
+  .naturaldesc {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: #142348;
     font-weight: normal;
-    font-size: 15px;
+    font-size: 12px;
     text-align: center;
     line-height: 1.5rem;
     margin-top: 10px;
