Se ha realizado la franja de las Question

--- a/src/components/keto/_Madeband.scss
+++ b/src/components/keto/_Madeband.scss
@@ -1,6 +1,9 @@
 .madeband {
-  margin-top: 65px;
+  margin-top: 0.5px;
   margin-left: 50px;
+  background-color: #f0f3f5;
+  padding: 20px;
+  margin-left: -10px;
 
   h2 {
     text-align: center;
@@ -57,7 +60,7 @@
     justify-content: center;
     color: #142348;
     font-weight: normal;
-    font-size: 12px;
+    font-size: 11px;
     text-align: center;
     line-height: 1.5rem;
     margin-top: 10px;
