--- a/src/components/keto/_keto.scss
+++ b/src/components/keto/_keto.scss
@@ -138,3 +138,46 @@ body {
     }
   }
 }
+
+.titleq {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  color: #4d78cc;
+  font-weight: normal;
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 30px;
+}
+.ask {
+  display: flex;
+  margin-right: 250px;
+  margin-left: 15px;
+  margin-top: 4px;
+  color: #142348;
+}
+.question {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; /* Adjust alignment as needed */
+  padding-top: 10px;
+  margin-bottom: 80px;
+}
+
+.question-box {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  border: 2px solid #f0f3f5;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  height: 30px;
+  width: 500px;
+  margin-left: 420px;
+  background-color: #f0f3f5;
+}
+
+.arrow {
+  margin-left: auto;
+  margin-top: -35px;
+}
