--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,6 @@
 @import "../components/keto/Numbersband";
 @import "../components/keto/Userband";
 @import "../components/keto/Madeband";
+@import "../components/keto/Readyband";
+@import "../components/keto/Addbutton";
+@import "../components/keto/Finalcard";
