--- a/src/components/keto/_ButtonGetYours.scss
+++ b/src/components/keto/_ButtonGetYours.scss
@@ -1,6 +1,6 @@
-.buttonget {
+.buttonGet {
   padding-top: 10px;
-  .btngetyourstoday {
+  .btnGetYoursToday {
     display: flex;
     padding: 1.25rem 8.7rem;
     border-radius: 50px;
