--- a/src/components/keto/_NavBar.scss
+++ b/src/components/keto/_NavBar.scss
@@ -1,6 +1,6 @@
 $color: #142348;
 
-.navbar {
+.navBar {
   display: flex;
   justify-content: space-between;
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
