--- a/src/components/keto/_SecondButtonGet.scss
+++ b/src/components/keto/_SecondButtonGet.scss
@@ -1,4 +1,4 @@
-.buttonget2 {
+.buttonGet2 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,7 +6,7 @@
   height: 100%;
   margin-bottom: 70px;
 
-  .btngetyourstoday2 {
+  .btnGetYoursToday2 {
     display: inline-block;
     padding: 0.8rem 4.5rem;
     border-radius: 50px;
