--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,16 +4,16 @@
 //Components.
 
 @import "../components/keto/_keto.scss";
-@import "../components/keto/Navbar";
-@import "../components/keto/Ketosisband";
-@import "../components/keto/Buttongetyours";
-@import "../components/keto/Cardbar";
-@import "../components/keto/Featuredband";
-@import "../components/keto/Secondbuttonget";
-@import "../components/keto/Ingredientcards";
-@import "../components/keto/Numbersband";
-@import "../components/keto/Userband";
-@import "../components/keto/Madeband";
-@import "../components/keto/Readyband";
-@import "../components/keto/Addbutton";
-@import "../components/keto/Finalcard";
+@import "../components/keto/NavBar";
+@import "../components/keto/KetosisBand";
+@import "../components/keto/ButtonGetYours";
+@import "../components/keto/CardBar";
+@import "../components/keto/FeaturedBand";
+@import "../components/keto/SecondButtonGet";
+@import "../components/keto/IngredientCards";
+@import "../components/keto/NumbersBand";
+@import "../components/keto/UsersBand";
+@import "../components/keto/MadeBand";
+@import "../components/keto/ReadyBand";
+@import "../components/keto/AddButton";
+@import "../components/keto/FinalCard";
