--- a/src/components/keto/_AddButton.scss
+++ b/src/components/keto/_AddButton.scss
@@ -1,4 +1,4 @@
-.addbutton {
+.addButton {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,7 +6,7 @@
   height: 100%;
   margin-bottom: 70px;
 
-  .addbutton1 {
+  .addButton1 {
     display: inline-block;
     padding: 0.8rem 4rem;
     border-radius: 50px;
