--- a/src/components/keto/_NumbersBand.scss
+++ b/src/components/keto/_NumbersBand.scss
@@ -1,9 +1,5 @@
-.madeband {
-  margin-top: 0.5px;
-  margin-left: 50px;
-  background-color: #f0f3f5;
-  padding: 20px;
-  margin-left: -10px;
+.numbersBand {
+  margin-top: 65px;
 
   h2 {
     text-align: center;
@@ -12,37 +8,38 @@
     font-size: 35px;
   }
 
-  .mades {
+  .numbers {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 100px;
-    margin-left: 30px;
   }
-  .made {
+  .number {
     text-align: center;
   }
 
-  .usa,
-  .gmp,
-  .fda,
-  .natural {
+  .number1,
+  .number2,
+  .number3,
+  .number4 {
+    background-color: #142348;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
+    color: #fff;
+    font-weight: bold;
     margin-right: 20px;
     font-size: 20px;
     margin-left: 96px;
-    margin-left: 15px;
   }
 
-  .madeinusa,
-  .gmpcertified,
-  .fdaapproved,
-  .allnaturall {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .support,
+  .boostNumb,
+  .manage,
+  .improve {
     margin-right: 20px;
     font-size: 16px;
     font-weight: bold;
@@ -50,17 +47,14 @@
     font-size: 20px;
   }
 
-  .usadesc,
-  .gmpdesc,
-  .fdadesc,
-  .naturaldesc {
+  .descriptionNumb {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: #142348;
     font-weight: normal;
-    font-size: 11px;
+    font-size: 15px;
     text-align: center;
     line-height: 1.5rem;
     margin-top: 10px;
